Refactor TextFinder::scopeStringMatches().

Extract startScopingStringMatches() function.
Use single Member<DeferredScopeStringMatches> instead of a vector.

BUG=669983

Review-Url: https://codereview.chromium.org/2546513002
Cr-Commit-Position: refs/heads/master@{#435906}

Former-commit-id: b943a912b47fa31360024c78ab996f12705812a9